fix overflow bug

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -442,6 +442,7 @@ section {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  max-width: 100%;
 }
 #projects .grid-container .flex-container {
   display: flex;
